--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+* Set up generate_armv7.c for compiling to arm assembly.
+ - Perhaps with a -s option to fble-compile to switch to use it.
+ 
 * Change FbleProfile functions to accept NULL, and clean up code to take
   advantage of that where it makes sense.
 
