Update fble to work on aarch64.
Switching from a 32 bit OS to a 64 bit OS for my Raspberry Pi.

  fble bench interpreted: 6m39s ==> 7m06s
  fble bench compiled:    5m03s ==> 5m58s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,8 @@
-* Set up generate_armv7.c for compiling to arm assembly.
+* Figure out why we end up always rebuilding all the spec tests.
+ - I bet it's because linking the Nat.fble file doesn't update its timestamp.
+* Debug fblf-md5 test failure after switch from armv7l to aarch64.
+
+* Set up generate_aarch64.c for compiling to aarch64 assembly.
  - Perhaps with a -s option to fble-compile to switch to use it.
  
 * Change FbleProfile functions to accept NULL, and clean up code to take
