--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,7 @@
 * Implement generate_aarch64
- - Figure out how to generate .data section to describe the static
-   FbleExecutableModule from assembly.
- - Move prototype for FbleLoadCompiled to a better place?
- - Implement top level wrapper function for aarch64.
+ - Generate assembly for deps, depc, and call into FbleLoadCompiled.
  - Implement abort and run functions in aarch64.
-   
+ - Move prototype for FbleLoadCompiled to a better place?
  
 * Change FbleProfile functions to accept NULL, and clean up code to take
   advantage of that where it makes sense.
