Generate assembly for the function call into FbleLoadCompiled.
And remove code for generate c left around in generate_aarch64.c.

We can now assembly the generated aarch64 code. I doubt it's anywhere
close to working correctly, but this is a good step.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,9 @@
 * Implement generate_aarch64
- - Generate assembly for deps, depc, and call into FbleLoadCompiled.
  - Implement abort and run functions in aarch64.
+ - Switch to using assembly in build.ninja.
+ - Debug debug debug.
  - Move prototype for FbleLoadCompiled to a better place?
+ - Retire generate_c?
  
 * Change FbleProfile functions to accept NULL, and clean up code to take
   advantage of that where it makes sense.
