--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 * Implement generate_aarch64
- - Implement abort and run functions in aarch64.
- - Debug debug debug.
+ - Implement run functions in aarch64.
+ - Implement abort functions in aarch64.
  - Move prototype for FbleLoadCompiled to a better place?
  - Retire generate_c?
  
