--- a/TODO.txt
+++ b/TODO.txt
@@ -2,12 +2,11 @@
  - Implement run functions in aarch64.
    - call
    - fork
-   - Profiling ops
  - Debug and fix "relocation truncated to fit" error.
    From use of adr instruction? Maybe need adrp for far away things?
  - Debug and fix FbleHeapObjectAddRef: Assertion `dst_ != NULL' failed.
  - Figure out how to refer to fields by name instead of hard coding offsets
-   into structs.
+   into structs. Same for Run function stack local variables.
  - Implement abort functions in aarch64.
  - Move prototype for FbleLoadCompiled to a better place?
  - Retire generate_c?
