--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,8 @@
 * Implement generate_aarch64
- - Implement run functions in aarch64.
-   - call
-   - fork
+ - Implement run function call instruction.
  - Debug and fix "relocation truncated to fit" error.
    From use of adr instruction? Maybe need adrp for far away things?
+ - Fix issue with immediate out of range for fork.
  - Debug and fix FbleHeapObjectAddRef: Assertion `dst_ != NULL' failed.
  - Figure out how to refer to fields by name instead of hard coding offsets
    into structs. Same for Run function stack local variables.
