Fix bug in generated profiling code.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,12 @@
 * Implement generate_aarch64
- - Debug starting from simple test failures:
-   || FAILED: out/test/0-test/undefined-access/test-compiled.tr 
-   || FAILED: out/test/5.3-func-apply/basic/single-arg/test-compiled.tr 
+ - Debug out/test/0-test/undefined-access/test-compiled.tr 
+   This looks okay, except for whatever reason it isn't printing the error
+   message. Maybe I can intercept the call to fprintf somehow?
+
+ - Debug out/test/5.3-func-apply/basic/single-arg/test-compiled.tr 
+   We're getting a NULL static function argument.
+
+ - Debug the following test failures:
    || FAILED: out/test/6.4-proc-exec/basic/single-binding/test-compiled.tr 
    
 
