--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,6 @@
-* Use offsetof wherever possible in generate_aarch64.c
- - Make a type representing Run and Abort stack frames.
 * Move prototype for FbleLoadCompiled to a better place?
 
-* Figure out why the assembler takes so much memory some times.
- - Compare to tcc, which doesn't.
- - Use Invaders/Graphics.fble for example.
-
-* Retire generate_c?
-
+* Remove code for generate_c.
 * Add instructions for list and literal, to avoid assembly code blowup from
   desugaring lists and literals?
  
