Implement LIST and LITERAL instructions.
Avoid desugaring list and literal expressions. Instead preserve them all
the way to fble code. This significantly reduces the size of the
assembly code we generated (on the order of 5x maybe?), making it easier
for the assembly to assemble the generated code.

fble bench interpreted:  3m51s -> 3m51s
fble bench compiled:     2m48s -> 2m40s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
-* Add instructions for list and literal, to avoid assembly code blowup from
-  desugaring lists and literals.
- 
+* Try to reduce size of generated assembly?
+ - Factor out slow paths for profiling and returning abort?
+ - Generate a sparse pc jump table?
+ - Avoid emitting unused labels?
+
 * Move prototype for FbleLoadCompiled to a better place?
 
 * Change FbleProfile functions to accept NULL, and clean up code to take
