--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,10 @@
-* Pick better names for _Run_ and _Abort_ functions.
- - Like, name them based on the profiling block info?
- - Yes, we should have code->_base.profile_blocks available from the top level
-   module for this.
+* Implement a balanced binary tree map in fble, see how it compares
+  performance wise to the structure based map
+ - Assumption is it will do much better because we don't have to allocate
+   structure values all over the place to access the map.
+
+* Investigate why fork-race test generates so many functions with the same
+  name? Is there a bug here someone? Shouldn't profile block names be unique?
 
 * For loaded submodules, should the module profile block be the module file or
   the place where it was imported from?
