Change syntax for stmt based union select default.
Instead of having an 'if' statement, treat it as a variation on a union
select expression with a different way to specify the default value.

This way we can use a syntax consistent with the rest of the syntax in
fble and allow multiple non-default branches in the union select instead
of a single non-default branch.

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,14 @@
  - Need to figure out how to handle InsertWith, which may or may not add an
    element to the map.
 
+* Look for other opportunities to make use of union if expression?
+
+* Fix missing dependency of generation of build.ninja on new spec tests.
+
+* Preserve union if expression all the way to the back end so we can generate
+  better code?
+ - A simple conditional check is surely better than a jump table for this.
+
 * Why does the Md5 benchmark take so much memory?
  - Is there a memory leak or memory growth bug? Shouldn't the memory use be
    constant?
