Draft of balanced binary tree map.
It's got some bugs to work out.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,12 @@
 * Implement balancing of the binary tree map.
- - Need to figure out how to handle InsertWith, which may or may not add an
-   element to the map.
-
-* Look for other opportunities to make use of union if expression?
+ - Add rebalance cases to RebalanceRight
+ - See if I can come up with a way to avoid duplicating code.
+ - Set up infrastructure to test rebalancing
+   There are just so many cases to test :(
+   Maybe we can set up a stress test, inserting a large number of integers in
+   random order and confirming at the end that it is properly balanced?
 
 * Fix missing dependency of generation of build.ninja on new spec tests.
-
-* Preserve union if expression all the way to the back end so we can generate
-  better code?
- - A simple conditional check is surely better than a jump table for this.
 
 * Why does the Md5 benchmark take so much memory?
  - Is there a memory leak or memory growth bug? Shouldn't the memory use be
