--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 * Add tests for balancing of /Map%?
-* Update Hwdg for new spec and implement md5?
- - Change PortSpec to Bool@ input, Bool@ output, to support InOut case.
+* Implement md5 in Hwdg?
 
 * Fix missing dependency of generation of build.ninja on new spec tests.
 
