Make FbleStructValue and FbleUnionValue internal definitions.
In preparation for when we implement bit packing of struct and union
values.

fble bench interpreted:  6m40s -> 6m48s
fble bench compiled:     4m19s -> 4m38s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-* Add tests for balancing of /Map%?
-* Implement md5 in Hwdg?
+* Implement md5 in Hwdg
 
 * Fix missing dependency of generation of build.ninja on new spec tests.
 
@@ -145,6 +144,7 @@
 * [/Invaders%] The aliens look like they are too far down the screen to start. Double check
   their initial coordinates.
 * [/Invaders%] Once it is fast enough to be reasonable to develop, finish writing the game.
+* [/Map%] Add tests for balancing of /Map%?
 * [/Sat%] Optimize the solver.
 * [/Sat%] Implement dimacs cnf parser.
 * [/Snake%] Switch to a target 60 FPS?
