Pass around FbleValue as a value instead of a pointer.
So we can start packing data directly into the values passed around
instead of allocating everything on the heap. Currently everything is
still allocated on the heap.

fble bench interpreted:  6m48s -> 7m01s
fble bench compiled:     4m38s -> 4m38s

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,10 @@
 * Implement md5 in Hwdg
 
+* Consider not exposing the FbleFuncValue type external to value.
+  Because packing and unpacking it everywhere is annoying.
+* Update documentation around use of NULL FbleValue
+  It should say FbleNullValue instead of 'NULL'.
+
 * Fix missing dependency of generation of build.ninja on new spec tests.
 
 * Why does the Md5 benchmark take so much memory?
