--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,14 @@
-* [/Hwdg%] Give separate Tests modules for each submodule.
-* [/Hwdg%] Move Adder module to a Designs subdirectory.
-* [/Hwdg%] Add tests for the Adder module.
 * Implement md5 in Hwdg
+ -  Give separate Tests modules for each submodule.
+ -  Move Adder module to a Designs subdirectory.
+ -  Add tests for the Adder module.
+
+* Implement support for packed data values.
+ - Change FbleTypeValue to FbleDataTypeValue and add appropriate fields.
+ - Implement FbleDataTypeInstr for allocating FbleDataTypeValues.
+ - Change the compiler to allocate FbleDataTypeValues when appropriate.
+ - Pass type to struct and union construction and access functions.
+ - Implement packing for struct and union values.
 
 * Consider not exposing the FbleFuncValue type external to value.
   Because packing and unpacking it everywhere is annoying.
